bobcat (5.04.01)

  * Stupid mistake: forgot to remove the Process header file included
    ../pipe/pipe  

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Wed, 04 Mar 2020 14:39:28 +0100

bobcat (5.04.00)

  * The Stat and Glob classes received new members and constructors allowing
    its objects to distinguish file types (like regular files and symbolic
    links) that cannot be distinguished when merely applying the `bitor'
    operator to their Type values. Their man-pages were updated accordingly.

  * The build-scripts (in the <classname>/driver directories) use the C++
    standard that is defined int the file ./c++std

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Tue, 03 Mar 2020 21:28:54 +0100

bobcat (5.03.00)

  * Simplfied the  PerlSetFSA s_stateTransitions FSA used by Pattern to a mere
    five states.

  * Updated the Stat, Pipe, and Process man-pages.

  * Pipe has several new members (e.g., for closing pipes); its d_fd array of
    file descriptors is now a private data member.

  * Process defines its own 'waitForChild' instead of simply calling the
    member inherited from 'Fork'.

  * Process avoids open pipes after completing child-processes.

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Fri, 28 Feb 2020 17:51:53 +0100

bobcat (5.02.00)

  * Added the member 'on' to the class 'Log'.

  * The member Log::off suppresses logging. Suppression can be undone by
    calling 'on'. The member 'setLevel' cannot be used anymore to reactivate
    logging.

  * Added the enumeration 'Active' to 'LogBuf' allowing derived
    classes to deactivate or suppress logging information.

  * Added the member 'LogBuf::empty' returning 'true' if the object's buffer
    is empty.

  * Added the member 'LogBuf::setActive(Active)'.

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Wed, 11 Dec 2019 11:06:34 +0100

bobcat (5.01.00)

  * Fixed a bug in the conversion mode recognition in BigInt::fromText

  * Added User(size_t uid) and User(string const &name) constructors to the