@@ -1,17 +1,6 @@
 template <typename Iterator, typename Type>
 Iterator binary_search(Iterator begin, Iterator end, Type const &value)
 {
-    Iterator ret = end;
-
-    while (begin != end)
-    {
-        Iterator mid = begin + (end - begin >> 1);
-        if (value < *mid)       // left half
-            end = mid;
-        else if (*mid < value)  // right half
-            begin = mid + 1;
-        else
-            return mid;
-    }
-    return ret;
+    auto iter = std::lower_bound(begin, end, value);
+    return not (iter == end) and not (value < *iter) ? iter : end;
 }
